[package]
name = "abbrws"
version = "0.1.0"
repository = "https://github.com/robohouse-delft/abbrws-rs"
authors = [
	"Maarten de Vries <maarten@de-vri.es>",
	"RoboHouse <robohouse@robovalley.com>",
]
edition = "2018"

[dependencies]
cookie = "^0.14.0"
digest_auth = "^0.2.1"
http = "^0.2.0"
hyper = {version = "^0.14", features = ["client", "runtime", "tcp", "http1"] }
mime = "^0.3.16"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

[dev-dependencies]
assert2 = "^0.3.3"
